Update front modals Upgrade permissions layer Added roles|permission management